--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 
   <body>
     <div class="flag">
-      <div class="crosslines1"></div>
-      <div></div>
+      <div class="red-diag-line"></div>
+      <div class="red-diag-line2"></div>
+      <div class="white-crossline"></div>
+      <div class="white-crossline2"></div>
+      <div class="red-crossline"></div>
+      <div class="red-crossline2"></div>
     </div>
   </body>
 </html>
